Fix hotel location layout issue in confirmation page

--- a/src/targets/beacon/styles/views/reservation.less
+++ b/src/targets/beacon/styles/views/reservation.less
@@ -1210,7 +1210,6 @@ reservation-confirmation {
         letter-spacing: 1px;
         line-height: 24px;
         text-transform: uppercase;
-        margin-top: 20px;
         margin-bottom: 20px;
         .viewport-mobile & {
           margin-top: 10px;
@@ -1220,7 +1219,6 @@ reservation-confirmation {
 
       .reservation-contacts {
         margin-top: 0;
-        padding-top: 0;
         ng-map {
           height: 360px;
         }
